<resources>
    <string name="app_name">隐式启动</string>
    <string name="title_add_shortcut">添加快捷方式</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="not_found_activity">找不到对应的 Activity</string>
    <string name="setting">设置</string>
    <string name="source">源码</string>
    <string name="manifest">AndroidManifest.xml</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="base_setting">基础设置</string>
    <string name="about">关于软件</string>
    <string name="support">支持开发者</string>
    <string name="tip_update">更新</string>
    <string name="share">分享</string>
    <string name="preview">预览</string>
    <string name="add_shortcut">添加快捷</string>
    <string name="no_data">没有设置 Data</string>
    <string name="no_action">没有设置 Action</string>
    <string name="no_category">没有设置 Category</string>
    <string name="udpate">更新版本</string>
    <string name="version">"版本号："</string>
    <string name="intro">        这是一款开发者辅助工具，帮助开发者发现手机上的应用的另一面，原理是利用 Android 提供的隐式启动 Activity 来快速启动某个应用的某个界面，如快速发朋友圈、扫一扫，快速切换 vpn 等。</string>
    <string name="add_new_checkbox">添加</string>
</resources>
